html con personajes

--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -20,6 +20,7 @@
 	<li><a href = "Creacion.html">Creacion</a></li>
 	<li><a href = "Peliculas.html">Peliculas</a></li>
 	<li><a href = "Equipo.html">Equipo</a></li>
+	<li><a href = "Personajes.html">Personajes</a></li>
 	</ul>
 	</nav>
 	</aside>
@@ -44,6 +45,20 @@ El equipo técnico, encabezado por Jim Rygiel y Randy Cook, trabajó duro hacien
 Por ejemplo, varias de las secuencias principales de la Batalla del Abismo de Helm fueron generadas en las últimas seis semanas de postproducción de Las dos torres, y lo mismo volvió a ocurrir en las últimas seis semanas de El retorno del Rey. 
 A pesar de que Weta Workshop fue la principal responsable de la mayor parte de los efectos visuales de las películas, la escena donde Arwen confronta a los Jinetes Negros en La comunidad del anillo fue hecha enteramente por Digital Domain.
 	</p>
+	<p>
+	Equipo
+Dirección: Peter Jackson
+Producción: Peter Jackson, Barrie M. Osborne y Fran Walsh
+Guion: Fran Walsh, Philippa Boyens y Peter Jackson
+Música: Howard Shore
+Fotografía: Andrew Lesnie
+    </p>
+	<p>
+	Título	                    Fecha de estreno	        Duración	Presupuesto(en USD)	Recaudación total mundial (USD)	
+La Comunidad del Anillo	    19 de diciembre de 2001	    178 min	    93 millones	        871.530.324
+Las dos torres              18 de diciembre de 2002	    179 min	    94 millones	        926.047.111
+El retorno del Rey	        17 de diciembre de 2003	    200 min	    94 millones​	     1.119.929.521	
+    </p>
 	</section>
 	</main>
 </body>
