html con personajes

--- a/Practica1/Peliculas.html
+++ b/Practica1/Peliculas.html
@@ -20,6 +20,7 @@
 	<li><a href = "Index.html">Inicio</a></li>
 	<li><a href = "Equipo.html">Equipo</a></li>
 	<li><a href = "Creacion.html">Creacion</a></li>
+	<li><a href = "Personajes.html">Personajes</a></li>
 	</ul>
 	</nav>
 	</aside>
