--- a/Practica1/Personajes.html
+++ b/Practica1/Personajes.html
@@ -42,9 +42,6 @@
 	GOLLUM su nombre original era Smeagol y posteriormente fue nombrado como Gollum en referencia al ruido regurgitante que hacia con su garganta.
 	Uno de sus deseos mas profundos fue el de poseer el Anillo y lo estuvo buscando durante muchos años despues de haberlo perdido.
     </p>
-	<aside>
-	<img alt="Gollum" src = "multimedia/gollum.jpeg" />
-	</aside>
 	<p>
 	FRODO es un hobbit, hijo de Drogo Bolson y Primula Brandigamo. Frodo fue el encargado de llevar el Anillo Único hasta el Monte del Destino para destruirlo,acompañado por su compañero Sam
 	</p>
@@ -56,7 +53,12 @@
 	SAURON tambien conocido como Annatar y como Mairon, es el antagonista principal de saga.
 	Sauron significa en quenya "el Horripilante" nombre puesto por sus enemigos.
 	</p>
-	
+	<aside>
+	<figure>
+	<img alt="Gollum" src = "/Practica1/multimedia/gollum.jpeg" />
+	<figcaption>Gollum</figcaption>
+	</figure>
+	</aside>
 	</section>
 	</main>
 </body>
