html con personajes

--- a/Practica1/Personajes.html
+++ b/Practica1/Personajes.html
@@ -30,17 +30,41 @@
 	LEGOLAS es uno de los personajes principales. Es un elfo sinda,hijo de Thranduil,el rey de los elfos silvanos del Bosque Negro.
 	Formó parte de la llamada Comunidad del Anillo, cuyo objetivo era la destruccion del Anillo Único de Sauron.
 	</p>
+	<aside>
+	<figure>
+	<img alt="Legolas" src = "multimedia/legolas.jpg" />
+	<figcaption>Legolas</figcaption>
+	</figure>
+	</aside>
 	<p>
 	ARAGORN era capitan los montaraces del norte, hijo de Arathorn II y Gilraen.
 	Lidero la Comunidad del anillo tras la caida de Gandalf.
 	</p>
+	<aside>
+	<figure>
+	<img alt="Aragorn" src = "multimedia/aragorn.jpg" />
+	<figcaption>Aragorn</figcaption>
+	</figure>
+	</aside>
 	<p>
 	GANDALF es un istar(mago), uno de los espíritus maia enviados a la Tierra Media durante la Tercera Edad del Sol para ayudar a sus habitantes en la lucha contra el seor oscuros Sauron.
 	Tiene aspecto de un anciano con una barba larga y de color blanco, vestido con una gran capa gris, un sombrero puntiagudo de color azul y un gran baston.
 	</p>
+	<aside>
+	<figure>
+	<img alt="Gandalf" src = "multimedia/gandalf.jpg" />
+	<figcaption>Gandalf</figcaption>
+	</figure>
+	</aside>
 	<p>
 	GOLLUM su nombre original era Smeagol y posteriormente fue nombrado como Gollum en referencia al ruido regurgitante que hacia con su garganta.
 	Uno de sus deseos mas profundos fue el de poseer el Anillo y lo estuvo buscando durante muchos años despues de haberlo perdido.
+	<aside>
+	<figure>
+	<img alt="Gollum" src = "multimedia/gollum.jpg" />
+	<figcaption>Gollum</figcaption>
+	</figure>
+	</aside>
     </p>
 	<p>
 	FRODO es un hobbit, hijo de Drogo Bolson y Primula Brandigamo. Frodo fue el encargado de llevar el Anillo Único hasta el Monte del Destino para destruirlo,acompañado por su compañero Sam
@@ -48,6 +72,12 @@
 	<p>
 	SAM su nombre completo es Samsagaz Gamyi. Es un hobbit de la Comarca, hijo de Hamfast Gamyi y Campanilla Buenchico.
 	Acompaña a Frodo hasta el Orodruin a destruir el Anillo Único.
+	<aside>
+	<figure>
+	<img alt="Sam y Frodo" src = "multimedia/samyfrodo.jpg" />
+	<figcaption>Sam y Frodo</figcaption>
+	</figure>
+	</aside>
     </p>
 	<p>
 	SAURON tambien conocido como Annatar y como Mairon, es el antagonista principal de saga.
@@ -55,8 +85,8 @@
 	</p>
 	<aside>
 	<figure>
-	<img alt="Gollum" src = "/Practica1/multimedia/gollum.jpeg" />
-	<figcaption>Gollum</figcaption>
+	<img alt="Sauron" src = "multimedia/sauron.jpg" />
+	<figcaption>Sauron</figcaption>
 	</figure>
 	</aside>
 	</section>
