html con personajes

--- a/Practica1/Creacion.html
+++ b/Practica1/Creacion.html
@@ -2,7 +2,6 @@
 
 <html lang="es">
 <head>
-    <!-- Datos que describen el documento -->
     <meta charset="UTF-8">
 	
 	<link rel="stylesheet" type="text/css" href="estilo.css" />
@@ -12,7 +11,6 @@
 </head>
 
 <body>
-    <!-- Datos con el contenidos que aparece en el navegador -->
     <header><h1>Como se hizo</h1></header>
 	<aside>
 	<nav>
@@ -21,6 +19,7 @@
 	<li><a href = "Peliculas.html">Peliculas</a></li>
 	<li><a href = "Equipo.html">Equipo</a></li>
 	<li><a href = "Personajes.html">Personajes</a></li>
+	<li><a href = "Premios.html">Premios</a></li>
 	</ul>
 	</nav>
 	</aside>
