--- a/Practica1/Peliculas.html
+++ b/Practica1/Peliculas.html
@@ -2,7 +2,6 @@
 
 <html lang="es">
 <head>
-    <!-- Datos que describen el documento -->
     <meta charset="UTF-8">
 	
 	<link rel="stylesheet" type="text/css" href="estilo.css" />
@@ -12,7 +11,6 @@
 </head>
 
 <body>
-    <!-- Datos con el contenidos que aparece en el navegador -->
     <header><h1>Peliculas</h1></header>
 	<aside>
 	<nav>
@@ -21,14 +19,15 @@
 	<li><a href = "Equipo.html">Equipo</a></li>
 	<li><a href = "Creacion.html">Creacion</a></li>
 	<li><a href = "Personajes.html">Personajes</a></li>
+	<li><a href = "Premios.html">Premios</a></li>
 	</ul>
 	</nav>
 	</aside>
 	
 	<main>
 	<section>
-	<h4>Peliculas</h4>
-	<table border="l">
+	<h2>Peliculas</h2>
+	<table>
 	<tr>
 	<th>Título</th>
 	<th>Fecha de estreno</th>
@@ -49,6 +48,7 @@
 	<th>179 min</th>
 	<th>94 millones</th>
 	<th>926.047.111</th>
+	</tr>
 	<tr>
 	<th>El retorno del Rey</th>
 	<th>17 de diciembre de 2003</th>
@@ -56,7 +56,7 @@
 	<th>94 millones</th>
 	<th>1.119.929.521</th>
 	</tr>
-	</tr>
+	</table>
 	</section>
 	</main>
 </body>
