--- a/Practica1/Personajes.html
+++ b/Practica1/Personajes.html
@@ -18,7 +18,8 @@
 	<li><a href = "Creacion.html">Creacion</a></li>
 	<li><a href = "Peliculas.html">Peliculas</a></li>
 	<li><a href = "Equipo.html">Equipo</a></li>
-	<li><a href = "index.html">Index</a></li>
+	<li><a href = "index.html">Inicio</a></li>
+	<li><a href = "Premios.html">Premios</a></li>
 	</ul>
 	</nav>
 	</aside>
@@ -59,26 +60,26 @@
 	<p>
 	GOLLUM su nombre original era Smeagol y posteriormente fue nombrado como Gollum en referencia al ruido regurgitante que hacia con su garganta.
 	Uno de sus deseos mas profundos fue el de poseer el Anillo y lo estuvo buscando durante muchos años despues de haberlo perdido.
+	</p>
 	<aside>
 	<figure>
 	<img alt="Gollum" src = "multimedia/gollum.jpg" />
 	<figcaption>Gollum</figcaption>
 	</figure>
 	</aside>
-    </p>
 	<p>
 	FRODO es un hobbit, hijo de Drogo Bolson y Primula Brandigamo. Frodo fue el encargado de llevar el Anillo Único hasta el Monte del Destino para destruirlo,acompañado por su compañero Sam
 	</p>
 	<p>
 	SAM su nombre completo es Samsagaz Gamyi. Es un hobbit de la Comarca, hijo de Hamfast Gamyi y Campanilla Buenchico.
 	Acompaña a Frodo hasta el Orodruin a destruir el Anillo Único.
+	</p>
 	<aside>
 	<figure>
 	<img alt="Sam y Frodo" src = "multimedia/samyfrodo.jpg" />
 	<figcaption>Sam y Frodo</figcaption>
 	</figure>
 	</aside>
-    </p>
 	<p>
 	SAURON tambien conocido como Annatar y como Mairon, es el antagonista principal de saga.
 	Sauron significa en quenya "el Horripilante" nombre puesto por sus enemigos.
