--- a/Practica1/Equipo.html
+++ b/Practica1/Equipo.html
@@ -2,7 +2,6 @@
 
 <html lang="es">
 <head>
-    <!-- Datos que describen el documento -->
     <meta charset="UTF-8">
 	
 	<link rel="stylesheet" type="text/css" href="estilo.css" />
@@ -12,7 +11,6 @@
 </head>
 
 <body>
-    <!-- Datos con el contenidos que aparece en el navegador -->
     <header><h1>Equipo</h1></header>
 	<aside>
 	<nav>
@@ -21,6 +19,7 @@
 	<li><a href = "Peliculas.html">Peliculas</a></li>
 	<li><a href = "Creacion.html">Creacion</a></li>
 	<li><a href = "Personajes.html">Personajes</a></li>
+	<li><a href = "Premios.html">Premios</a></li>
 	</ul>
 	</nav>
 	</aside>
@@ -28,7 +27,7 @@
 	<main>
 	<section>
 	<h2>Equipo</h2>
-	<table border="l">
+	<table>
 	<tr>
 	<th>Direccion:</th>
 	<th>Peter Jackson</th>
@@ -49,6 +48,7 @@
 	<th>Fotografia:</th>
 	<th>Andrew Lesnie</th>
 	</tr>
+	</table>
 	</section>
 	</main>
 </body>
